--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,5 +4,9 @@ galaxy_info:
   company: optionfactory
   license: BSD
   min_ansible_version: 1.2
+  platforms:
+  - name: Ubuntu
+    versions:
+    - xenial
   galaxy_tags: []
 dependencies: []
