--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,6 +2,11 @@
 - name: add docker repo
   apt_repository:
     filename: dockerrepo
+    state: absent
+    repo: "deb https://apt.dockerproject.org/repo ubuntu-xenial main"
+- name: add docker repo
+  apt_repository:
+    filename: dockerrepo
     repo: "deb https://download.docker.com/linux/ubuntu xenial stable"
 - name: add docker repo key
   apt_key:
@@ -9,6 +14,10 @@
     id: 0EBFCD88
 - name: update apt cache
   shell: apt update
+- name: remove old docker-engine
+  apt:
+    name: docker-engine
+    state: absent
 - name: install docker-ce
   apt:
     name: docker-ce
