--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,34 +1,33 @@
 ---
-- name: remove old docker repo
-  apt_repository:
-    filename: dockerrepo
-    state: absent
-    repo: "deb https://apt.dockerproject.org/repo ubuntu-xenial main"
 - name: add docker repo
+  when: ansible_os_family == 'Debian'
   apt_repository:
     filename: dockerrepo
     repo: "deb https://download.docker.com/linux/ubuntu xenial stable"
 - name: add docker repo key
+  when: ansible_os_family == 'Debian'
   apt_key:
     url: https://download.docker.com/linux/ubuntu/gpg
     id: 0EBFCD88
-- name: update apt cache
-  shell: apt update
-- name: remove old docker-engine
+- name: install docker (Debian)
+  when: ansible_os_family == 'Debian'
   apt:
-    name: docker-engine
-    state: absent
-- name: install docker-ce
-  apt:
+    update_cache: yes
     name: docker-ce
     state: present
+- name: install docker (Suse)
+  when: ansible_os_family == 'Suse'
+  zypper:
+    update_cache: yes
+    name: docker
+    state: present
 - group:
-    name: docker 
+    name: docker
     state: present
 - user:
     name: ubuntu
     append: yes
-    groups: docker    
+    groups: docker
 - name: ensure base services are started
   service:
     name: docker
