--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,9 +1,12 @@
 ---
-- name: add docker repo
+- name: add docker repo (Debian)
   when: ansible_os_family == 'Debian'
   apt_repository:
     filename: dockerrepo
     repo: "deb https://download.docker.com/linux/ubuntu xenial stable"
+- name: add docker repo (Suse)
+  when: ansible_os_family == 'Suse'
+  shell: 'SUSEConnect -p sle-module-containers/12/x86_64'
 - name: add docker repo key
   when: ansible_os_family == 'Debian'
   apt_key:
